--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
@@ -100,3 +100,7 @@ a.header-items:hover {
     color: orange;
     background-color: #f1f1f1;
 }
+
+header.header {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
