--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -19,19 +19,6 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Reports" asp-route-reportType="@ReportTypeConstants.DiscussionType" asp-route-pageNumber="1" asp-route-pageSize="20">DiscussionReports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Reports" asp-route-reportType="@ReportTypeConstants.CommentType" asp-route-pageNumber="1" asp-route-pageSize="20">CommentsReports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="1" asp-route-pageSize="30">Все пользователи</a>
-                        </li>
-                    </ul>
-                </div> *@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
@@ -66,6 +53,10 @@
                                     <button id="dropdownProfileButton" class="open-profile-dropdown-btn">@User.Identity.Name &#x25BC;</button>
                                     <div id="dropdownProfileList" class="dropdown-profile-list">
                                         <a class="dropdown-refs" asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
+                                        @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
+                                        {
+                                            <a class="dropdown-refs" asp-controller="Moderator" asp-action="GetAdminPanel">админ панель</a>
+                                        }
                                         <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@returnUrl">
                                             <input class="logout" type="submit" value="выйти"/>
                                         </form>
