--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Предложенные комментарии";
+    ViewData["Title"] = "Созданные комментарии";
 }
 @model Web.MVC.Models.ViewModels.UserViewModels.GetCommentsViewModel
 
