--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedDiscussions.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Предложенные обсуждения";
+    ViewData["Title"] = "Созданные обсуждения";
 }
 @model GetDiscussionsViewModel
 
