--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
@@ -2,18 +2,27 @@
     ViewData["Title"] = "Предложенные темы";
 }
 @using Web.MVC.Constants
-@model List<Web.MVC.Models.ApiResponses.TopicResponse>
+@model Web.MVC.Models.ViewModels.ModeratorViewModels.SuggestedTopicsByUserNameViewModel
 
 <div class="text-center">
     <h3>Предложенные темы</h3>
-    @if (Model.Count != 0)
+    @if (Model.SuggestedTopics.Count != 0)
     {
-        <form method="post" asp-controller="Moderator" asp-action="DeleteSuggestedTopicsByUserName" asp-route-userName="@ViewBag.SuggestedByUserName"
-              asp-route-returnUrl="@Context.Request.Path">
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
+        <form method="post" asp-controller="Moderator" asp-action="DeleteSuggestedTopicsByUserName" asp-route-userName="@Model.SuggestedByUserName"
+              asp-route-returnUrl="@returnUrl">
             <input type="submit" value="удалить все предложенные темы" />
         </form>
-        <a asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@ViewBag.SuggestedByUserName"
-           asp-route-returnUrl="@Context.Request.Path">забанить пользователя</a>
+        <a asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@Model.SuggestedByUserName"
+           asp-route-returnUrl="@returnUrl">забанить пользователя</a>
     }
     
     <table>
@@ -29,7 +38,7 @@
             {
                 returnUrl = Context.Request.Path;
             }
-            @foreach (var suggestedTopic in Model)
+            @foreach (var suggestedTopic in Model.SuggestedTopics)
             {
                 <tr>
                     <td>@suggestedTopic.Name</td>
@@ -41,3 +50,18 @@
         }
     </table>
 </div>
+
+@if (Model.PreviousPageNumber != 0)
+{
+    <a asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="@Model.PreviousPageNumber"
+       asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
+        Назад
+    </a>
+}
+@if (Model.DoesNextPageExist && Model.SuggestedTopics.Count != 0)
+{
+    <a asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="@Model.NextPageNumber"
+       asp-route-pageSize="@Model.PageSize" asp-route-userName="@Model.SuggestedByUserName">
+        Вперед
+    </a>
+}
