--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -5,7 +5,6 @@
 @model Web.MVC.Models.ApiResponses.CustUserResponses.UserResponse
 <link rel="stylesheet" href="~/css/user/dropdown.css"/>
 <link rel="stylesheet" href="~/css/user/navbar.css"/>
-<script src="~/js/user/dropdownUser.js"></script>
 <div>
     <div class="profile-navbar">
         <a class="active" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.UserName">профиль</a>
@@ -37,15 +36,19 @@
             }
         </div>
         <div class="dropdown">
-            @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole) && User.Identity.Name != Model.UserName)
+            @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
             {
                 <div>
                     <button id="dropdownAdminButton" class="open-dropdown-btn">админ &#x25BC;</button>
                     <div id="dropdownAdminList" class="dropdown-list">
-                        <a class="dropdown-content" href="~/SuggestedTopics/@Model.UserName">предложенные темы</a>
-                        <a class="dropdown-content" href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a>
-                        <a class="dropdown-content" href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a>
-                        <a class="dropdown-content" href="~/ReportsByUser/@Model.UserName?pageNumber=1&pageSize=20">жалобы</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.UserName">предложенные темы</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
+                           asp-route-userName="@Model.UserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedCommentsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.UserName">предложенные комментарии</a>
+                        <a class="dropdown-content" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
+                           asp-route-pageSize="20" asp-route-userName="@Model.UserName">жалобы</a>
                     </div>
                 </div>
             }
@@ -103,3 +106,5 @@
         </a>
     </div>
 }
+<script src="~/js/user/dropdownUserAdmin.js"></script>
+<script src="~/js/user/dropdownUserSuggestions.js"></script>
