--- a/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByNovelty.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByNovelty.cshtml
@@ -1,7 +1,60 @@
 ﻿@{
     ViewData["Title"] = "Новые закладки";
 }
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Web.MVC.Constants
 @model Web.MVC.Models.ViewModels.Bookmark.BookmarkViewModel
+<link rel="stylesheet" href="~/css/user/dropdown.css" />
+<link rel="stylesheet" href="~/css/user/navbar.css" />
+
+<div class="profile-navbar">
+    <a asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.UserName">профиль</a>
+    <a asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.UserName"
+       asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
+    <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
+       asp-route-userName="@Model.UserName">комментарии</a>
+    @if (User.Identity.Name == Model.UserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
+    {
+        <a class="active" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
+           asp-route-userName="@Model.UserName">
+            закладки
+        </a>
+    }
+    <div class="dropdown">
+        @if (User.Identity.Name == Model.UserName)
+        {
+            <div>
+                <button id="dropdownSuggestionsButton" class="open-dropdown-btn">предложения &#x25BC;</button>
+                <div id="dropdownSuggestionsList" class="dropdown-list">
+                    <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedComments" asp-route-pageNumber="1"
+                       asp-route-pageSize="20" asp-route-userName="@Model.UserName">комментарии</a>
+                    <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedDiscussions" asp-route-userName="@Model.UserName"
+                       asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
+                    <a class="dropdown-content" asp-controller="User" asp-action="GetUsersSuggestedTopics" asp-route-pageNumber="1"
+                       asp-route-pageSize="20" asp-route-userName="@Model.UserName">темы</a>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="dropdown">
+        @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
+        {
+            <div>
+                <button id="dropdownAdminButton" class="open-dropdown-btn">админ &#x25BC;</button>
+                <div id="dropdownAdminList" class="dropdown-list">
+                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
+                       asp-route-pageSize="20" asp-route-userName="@Model.UserName">предложенные темы</a>
+                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
+                       asp-route-userName="@Model.UserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
+                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedCommentsByUserName" asp-route-pageNumber="1"
+                       asp-route-pageSize="20" asp-route-userName="@Model.UserName">предложенные комментарии</a>
+                    <a class="dropdown-content" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
+                       asp-route-pageSize="20" asp-route-userName="@Model.UserName">жалобы</a>
+                </div>
+            </div>
+        }
+    </div>
+</div>
 
 <h3>Закладки</h3>
 <div>
@@ -51,3 +104,5 @@
         Вперед
     </a>
 }
+<script src="~/js/user/dropdownUserAdmin.js"></script>
+<script src="~/js/user/dropdownUserSuggestions.js"></script>
