--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/navbar.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/navbar.css
@@ -21,3 +21,8 @@
     color: white;
     border: 1px solid orange;
 }
+.profile-navbar button.active {
+    background-color: orange;
+    color: white;
+    border: 1px solid orange;
+}
