--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
@@ -3,6 +3,8 @@
 }
 @model GetDiscussionsViewModel
 <link rel="stylesheet" href="~/css/forumNavbar.css" />
+<link rel="stylesheet" href="~/css/pagination-next-previous-links.css"/>
+<link rel="stylesheet" href="~/css/discussion/discussionsList.css"/>
 
 <div class="forum-navbar">
     <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForToday" asp-route-pageNumber="1" asp-route-pageSize="20">За сегодня</a>
@@ -13,19 +15,33 @@
 
 @foreach (var discussion in Model.Discussions)
 {
-    <a asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@discussion.Id" asp-route-pageNumber="1" asp-route-pageSize="20">@discussion.Title</a>
-    <h6>Создано: @discussion.CreatedBy</h6>
-    <h6>Рейтинг: @discussion.Rating</h6>
-    <h6>Дата создания: @discussion.CreatedAt</h6>
+    <div class="border-div">
+        <a asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@discussion.Id" asp-route-pageNumber="1" asp-route-pageSize="20">
+            @discussion.Title
+        </a>
+        <h6>Создано: @discussion.CreatedBy</h6>
+        <h6>Рейтинг: @discussion.Rating</h6>
+        <h6>Дата создания: @discussion.CreatedAt</h6>
+    </div>
 }
 
-@if (Model.PreviousPageNumber != 0 && Model.Discussions.Count != 0)
-{
-    <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime" asp-route-pageNumber="@Model.PreviousPageNumber"
-       asp-route-pageSize="@Model.PageSize">Назад</a>
-}
-@if (Model.DoesNextPageExist && Model.Discussions.Count != 0)
-{
-    <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime" asp-route-pageNumber="@Model.NextPageNumber"
-       asp-route-pageSize="@Model.PageSize">Вперед</a>
-}
+<div class="pagination-link-container">
+    @if (Model.PreviousPageNumber != 0 && Model.Discussions.Count != 0)
+    {
+        <a class="pagination-link-previous" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime"
+           asp-route-pageNumber="@Model.PreviousPageNumber"asp-route-pageSize="@Model.PageSize">Назад</a>
+    }
+    else
+    {
+        <a class="pagination-link-previous-doesnt-exist">Назад</a>
+    }
+    @if (Model.DoesNextPageExist && Model.Discussions.Count != 0)
+    {
+        <a class="pagination-link-next" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime"
+           asp-route-pageNumber="@Model.NextPageNumber"asp-route-pageSize="@Model.PageSize">Вперед</a>
+    }
+    else
+    {
+        <a class="pagination-link-next-doesnt-exist">Вперед</a>
+    }
+</div>
